--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.12.0
 annotated-types==0.5.0
 anyio==3.7.1
 bcrypt==4.0.1
+black==23.9.1
 certifi==2023.7.22
 cffi==1.15.1
 click==8.1.7
@@ -22,10 +23,13 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.3
+mypy-extensions==1.0.0
 mysql-connector-python==8.1.0
 orjson==3.9.7
 packaging==23.1
 passlib==1.7.4
+pathspec==0.11.2
+platformdirs==3.10.0
 pluggy==1.3.0
 protobuf==4.21.12
 pyasn1==0.5.0
